docs/0.17/_sources/api/gammapy.datasets.MapDataset.rst.txt
MapDataset
==========

.. currentmodule:: gammapy.datasets

.. autoclass:: MapDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapDataset.data_shape
      ~MapDataset.evaluators
      ~MapDataset.mask
      ~MapDataset.models
      ~MapDataset.name
      ~MapDataset.stat_type
      ~MapDataset.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapDataset.copy
      ~MapDataset.create
      ~MapDataset.cutout
      ~MapDataset.fake
      ~MapDataset.from_dict
      ~MapDataset.from_geoms
      ~MapDataset.from_hdulist
      ~MapDataset.npred
      ~MapDataset.plot_residuals
      ~MapDataset.read
      ~MapDataset.residuals
      ~MapDataset.stack
      ~MapDataset.stat_array
      ~MapDataset.stat_sum
      ~MapDataset.to_dict
      ~MapDataset.to_hdulist
      ~MapDataset.to_image
      ~MapDataset.to_spectrum_dataset
      ~MapDataset.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: data_shape
   .. autoattribute:: evaluators
   .. autoattribute:: mask
   .. autoattribute:: models
   .. autoattribute:: name
   .. autoattribute:: stat_type
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: cutout
   .. automethod:: fake
   .. automethod:: from_dict
   .. automethod:: from_geoms
   .. automethod:: from_hdulist
   .. automethod:: npred
   .. automethod:: plot_residuals
   .. automethod:: read
   .. automethod:: residuals
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
   .. automethod:: to_dict
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: to_spectrum_dataset
   .. automethod:: write
